State machine work
