# api/api.go
@@ -8,6 +8,7 @@ import (
 	"strconv"
 
 	"github.com/ONSdigital/dp-authorisation/auth"
+	"github.com/ONSdigital/dp-dataset-api/application"
 	"github.com/ONSdigital/dp-dataset-api/config"
 	"github.com/ONSdigital/dp-dataset-api/dimension"
 	"github.com/ONSdigital/dp-dataset-api/instance"
@@ -57,6 +58,7 @@ type DatasetAPI struct {
 	Router                   *mux.Router
 	dataStore                store.DataStore
 	urlBuilder               *url.Builder
+	enableURLRewriting       bool
 	host                     string
 	downloadServiceToken     string
 	EnablePrePublishView     bool
@@ -69,10 +71,12 @@ type DatasetAPI struct {
 	versionPublishedChecker  *PublishCheck
 	MaxRequestOptions        int
 	DisableNeptune           bool
+	smDatasetAPI             *application.StateMachineDatasetAPI
+	EnableStateMachine       bool
 }
 
 // Setup creates a new Dataset API instance and register the API routes based on the application configuration.
-func Setup(ctx context.Context, cfg *config.Configuration, router *mux.Router, dataStore store.DataStore, urlBuilder *url.Builder, downloadGenerators map[models.DatasetType]DownloadsGenerator, datasetPermissions, permissions AuthHandler) *DatasetAPI {
+func Setup(ctx context.Context, cfg *config.Configuration, router *mux.Router, dataStore store.DataStore, urlBuilder *url.Builder, downloadGenerators map[models.DatasetType]DownloadsGenerator, datasetPermissions, permissions AuthHandler, enableURLRewriting bool, smDatasetAPI *application.StateMachineDatasetAPI, enableStateMachine bool) *DatasetAPI {
 	api := &DatasetAPI{
 		dataStore:                dataStore,
 		host:                     cfg.DatasetAPIURL,
@@ -80,6 +84,7 @@ func Setup(ctx context.Context, cfg *config.Configuration, router *mux.Router, d
 		EnablePrePublishView:     cfg.EnablePrivateEndpoints,
 		Router:                   router,
 		urlBuilder:               urlBuilder,
+		enableURLRewriting:       enableURLRewriting,
 		downloadGenerators:       downloadGenerators,
 		enablePrivateEndpoints:   cfg.EnablePrivateEndpoints,
 		enableDetachDataset:      cfg.EnableDetachDataset,
@@ -89,6 +94,8 @@ func Setup(ctx context.Context, cfg *config.Configuration, router *mux.Router, d
 		instancePublishedChecker: nil,
 		MaxRequestOptions:        cfg.MaxRequestOptions,
 		DisableNeptune:           cfg.DisableGraphDBDependency,
+		smDatasetAPI:             smDatasetAPI,
+		EnableStateMachine:       enableStateMachine,
 	}
 
 	paginator := pagination.NewPaginator(cfg.DefaultLimit, cfg.DefaultOffset, cfg.DefaultMaxLimit)
@@ -108,31 +115,30 @@ func Setup(ctx context.Context, cfg *config.Configuration, router *mux.Router, d
 			Host:                api.host,
 			Storer:              api.dataStore.Backend,
 			EnableDetachDataset: api.enableDetachDataset,
+			URLBuilder:          api.urlBuilder,
+			EnableURLRewriting:  api.enableURLRewriting,
 		}
 
 		dimensionAPI := &dimension.Store{
-			Storer:            api.dataStore.Backend,
-			MaxRequestOptions: api.MaxRequestOptions,
+			Host:               api.host,
+			Storer:             api.dataStore.Backend,
+			MaxRequestOptions:  api.MaxRequestOptions,
+			URLBuilder:         api.urlBuilder,
+			EnableURLRewriting: api.enableURLRewriting,
 		}
 
 		api.enablePrivateDatasetEndpoints(paginator)
 		api.enablePrivateInstancesEndpoints(instanceAPI, paginator)
 		api.enablePrivateDimensionsEndpoints(dimensionAPI, paginator)
 	} else {
-
-		instanceAPI := &instance.Store{
-			Host:                api.host,
-			Storer:              api.dataStore.Backend,
-			EnableDetachDataset: api.enableDetachDataset,
-		}
 		log.Info(ctx, "enabling only public endpoints for dataset api")
-		api.enablePublicEndpoints(paginator, instanceAPI)
+		api.enablePublicEndpoints(paginator)
 	}
 	return api
 }
 
 // enablePublicEndpoints register only the public GET endpoints.
-func (api *DatasetAPI) enablePublicEndpoints(paginator *pagination.Paginator, instanceAPI *instance.Store) {
+func (api *DatasetAPI) enablePublicEndpoints(paginator *pagination.Paginator) {
 	api.get("/datasets", paginator.Paginate(api.getDatasets))
 	api.get("/datasets/{dataset_id}", api.getDataset)
 	api.get("/datasets/{dataset_id}/editions", paginator.Paginate(api.getEditions))
@@ -142,12 +148,6 @@ func (api *DatasetAPI) enablePublicEndpoints(paginator *pagination.Paginator, in
 	api.get("/datasets/{dataset_id}/editions/{edition}/versions/{version}/metadata", api.getMetadata)
 	api.get("/datasets/{dataset_id}/editions/{edition}/versions/{version}/dimensions", paginator.Paginate(api.getDimensions))
 	api.get("/datasets/{dataset_id}/editions/{edition}/versions/{version}/dimensions/{dimension}/options", paginator.Paginate(api.getDimensionOptions))
-	api.post("/instances", instanceAPI.Add)
-	api.put("/instances/{instance_id}", instanceAPI.Update)
-	api.post("/datasets/{dataset_id}", api.addDataset)
-	api.put("/datasets/{dataset_id}", api.putDataset)
-	api.put("/datasets/{dataset_id}/editions/{edition}/versions/{version}", api.putVersion)
-
 }
 
 // enablePrivateDatasetEndpoints register the datasets endpoints with the appropriate authentication and authorisation
@@ -212,6 +212,13 @@ func (api *DatasetAPI) enablePrivateDatasetEndpoints(paginator *pagination.Pagin
 				api.addDataset)),
 	)
 
+	api.post(
+		"/datasets",
+		api.isAuthenticated(
+			api.isAuthorisedForDatasets(createPermission,
+				api.addDatasetNew)),
+	)
+
 	api.put(
 		"/datasets/{dataset_id}",
 		api.isAuthenticated(
@@ -239,6 +246,13 @@ func (api *DatasetAPI) enablePrivateDatasetEndpoints(paginator *pagination.Pagin
 		api.isAuthenticated(
 			api.isAuthorisedForDatasets(updatePermission,
 				api.putMetadata)),
+	)
+
+	api.post(
+		"/datasets/{dataset_id}/editions/{edition}/versions",
+		api.isAuthenticated(
+			api.isAuthorisedForDatasets(createPermission,
+				api.addDatasetVersionCondensed)),
 	)
 
 	if api.enableDetachDataset {
