# swagger.yaml
@@ -3,7 +3,9 @@ info:
   description: "Used to find information about data published by the ONS.
   `Datasets` are published in unique `versions`, which are categorized by `edition`.
   Data in each version is broken down by `dimensions`, and a unique combination
-  of dimension `options` in a version can be used to retrieve `observation` level data."
+  of dimension `options` in a version can be used to retrieve `observation` level data.
+  
+  Note: As of the latest update, the `@context` field has been removed from all dataset endpoints to improve response performance and correct data structure."
   version: "1.0.0"
   title: "Explore our data"
   license:
@@ -250,12 +252,37 @@ paths:
           description: "No dataset was found with the popultation-type provided"
         500:
           $ref: '#/responses/InternalError'
+    post:
+      tags:
+      - "Private user"
+      summary: "Create a new dataset"
+      description: "Allows an authenticated and authorised user to create a new dataset. The dataset ID should be included in the request body."
+      parameters:
+      - $ref: '#/parameters/new_dataset'
+      produces:
+      - "application/json"
+      responses:
+        201:
+          description: "A JSON object containing the newly created dataset"
+          schema:
+            $ref: '#/definitions/NewDatasetResponse'
+        400:
+          description: "Invalid request body"
+        401:
+          description: "Unauthorised to create/overwrite dataset"
+        403:
+          description: "Forbidden to overwrite dataset, dataset already exists"
+        500:
+          $ref: '#/responses/InternalError'
+
   /datasets/{id}:
     post:
       tags:
       - "Private user"
-      summary: "Create a dataset"
-      description: "Create a dataset provided by the ONS that can be filtered using the filter API"
+      summary: "Create a dataset (deprecated)"
+      description: |
+        **Deprecated:** This endpoint is being replaced by `POST /datasets`. Please use `POST /datasets` and provide the dataset ID in the request body. This endpoint may be removed in a future release.
+      deprecated: true
       parameters:
       - $ref: '#/parameters/id'
       - $ref: '#/parameters/new_dataset'
@@ -389,6 +416,33 @@ paths:
               * edition was incorrect
         404:
           description: "No versions found using the id and edition provided"
+        500:
+          $ref: '#/responses/InternalError'
+    post:
+      tags:
+      - "Private user"
+      summary: "Create a version"
+      description: "Create a version for a dataset series.  This will set the state of the version and dataset series to be associated."
+      parameters:
+        - $ref: '#/parameters/id'
+        - $ref: '#/parameters/edition'
+        - $ref: '#/parameters/version_update'
+        - $ref: '#/definitions/Version'
+      responses:
+        201:
+          description: "A json object containing a version"
+          schema:
+            $ref: '#/definitions/NewVersionResponse'
+        400:
+          description: |
+            Invalid request, reasons can be one of the following:
+              * invalid request body
+              * dataset id was incorrect
+              * edition was incorrect
+        401:
+          description: "Unauthorised to update version of dataset"
+        404:
+          description: "Dataset series was not found for a dataset using the id and edition provided"
         500:
           $ref: '#/responses/InternalError'
   /datasets/{id}/editions/{edition}/versions/{version}:
@@ -1098,7 +1152,7 @@ definitions:
     type: object
     properties:
       date:
-        description: "The date and time of when an alert took place"
+        description: "The date and time of publication of the version"
         type: string
       description:
         description: "Detail of what a user needs to be aware of for this dataset"
@@ -1181,8 +1235,11 @@ definitions:
     type: object
     required: ["id", "contacts", "description", "license", "links", "national_statistics", "title"]
     properties:
+      id:
+        description: "The unique id for the dataset"
+        type: string
       canonical_topic:
-        description: "The canonical topic id for this dataset.  This indicates which topic this dataset belongs to within the website taxonomy."
+        description: "The canonical topic id for this dataset.  This indicates which topic this dataset belongs to within the website taxonomy. **Deprecated** this field is being deprecated and replaced by the `Themes` field."
         type: string
       collection_id:
         $ref: '#/definitions/CollectionID'
@@ -1227,10 +1284,6 @@ definitions:
       next_release:
         description: "The next release date for a dataset"
         type: string
-      nomis_ref_url:
-        description: "The NOMIS reference url for the dataset"
-        type: string
-        example: "https://www.nomisweb.co.uk/census/2011/ks106ew"
       publications:
         description: "A list of publications for a dataset"
         type: array
@@ -1294,7 +1347,7 @@ definitions:
       state:
         $ref: '#/definitions/State'
       subtopics:
-        description: "A list of subtopic ids that the dataset relates to within the website taxonomy."
+        description: "A list of subtopic ids that the dataset relates to within the website taxonomy. **Deprecated** this field is being deprecated and replaced by the `Themes` field."
         type: array
         items:
           type: "string"
@@ -1318,12 +1371,17 @@ definitions:
       uri:
         description: "The uri to the location of this resource on the web"
         type: string
+      themes:
+        description: "A list of topics and subtopics that the dataset relates to within the website taxonomy. This field consolidates the previously separate `canonical_topic` and `subtopics` fields."
+        type: array
+        items:
+          type: "string"
     
 
   Type:
     description: "The type for a dataset" 
     type: string
-    enum: [filterable, nomis]
+    enum: [filterable]
     default: "filterable"    
   IsBasedOn:
     description: "Information about the population-type that the dataset is based on (census 2021 only)" 
@@ -1810,7 +1868,7 @@ definitions:
         items:
           $ref: '#/definitions/Alert'
       canonical_topic:
-        description: "The canonical topic id for this dataset.  This indicates which topic this dataset belongs to within the website taxonomy."
+        description: "The canonical topic id for this dataset.  This indicates which topic this dataset belongs to within the website taxonomy. **Deprecated** this field is being deprecated and replaced by the `Themes` field."
         type: string
       contacts:
         description: "A list containing contact details of staticians for a dataset"
@@ -1932,7 +1990,7 @@ definitions:
         description: "The release frequency of a dataset"
         type: string
       subtopics:
-        description: "A list of subtopic ids that the dataset relates to within the website taxonomy."
+        description: "A list of subtopic ids that the dataset relates to within the website taxonomy. **Deprecated** this field is being deprecated and replaced by the `Themes` field."
         type: array
         items:
           type: "string"
@@ -1953,6 +2011,11 @@ definitions:
         type: string
       usage_notes:
         $ref: '#/definitions/UsageNotes'
+      themes:
+        description: "A list of topics and subtopics that the dataset relates to within the website taxonomy. This field consolidates the previously separate `canonical_topic` and `subtopics` fields."
+        type: array
+        items:
+          type: "string"
   NewDatasetResponse:
     description: "A model for the response body when creating a new dataset"
     type: object
@@ -2313,9 +2376,7 @@ definitions:
         type: integer
   Version:
     description: "An object containing information about published datasets from the ONS"
-    required: [
-      release_date,
-    ]
+    required: ["title", "description", "type", "next_release", "release_date", "state", "themes"]
     type: object
     properties:
       alerts:
